FIXED NAV ITEMS SPACING

--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ a {
   list-style: none;
   display: flex;
  
-  gap: .6rem;
+  gap: .65rem;
 }
 
 .nav-links li a {
